# technical-test

./: README.md  docker-compose.yml
backend/: Dockerfile  db.sqlite3  pyproject.toml
backend/investment/: models.py  serializers.py  tests.py  views.py
backend/investment/management/commands/: init.py
backend/investment/migrations/: 0001_initial.py  0002_auto_20210312_2200.py  0003_auto_20210312_2201.py  0004_auto_20210312_2204.py
backend/kpi/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/e2e/src/: app.e2e-spec.ts
frontend/src/: index.html  proxy.conf.json
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  investment.service.ts
frontend/src/app/chart/: chart-routing.module.ts  chart.component.html  chart.component.scss  chart.component.spec.ts  chart.component.ts  chart.module.ts
frontend/src/app/map/: dialog.component.spec.ts  dialog.component.ts  map-routing.module.ts  map.component.html  map.component.scss  map.component.spec.ts  map.component.ts  map.module.ts
frontend/src/app/models/: index.ts
frontend/src/app/table/: table-routing.module.ts  table.component.html  table.component.scss  table.component.spec.ts  table.component.ts  table.module.ts
frontend/src/app/table/modify/: modify.component.scss  modify.component.spec.ts  modify.component.ts
